<resources>
    <string name="app_name">ACL 4 Phase1</string>
    <string name="main_title">Welcome To ALC 4.0</string>
    <string name="about_alc_btn_text">ABOUT ALC</string>
    <string name="my_profile_btn_text">MY PROFILE</string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="label_track">Track: </string>
    <string name="label_country">Country: </string>
    <string name="label_email">Email: </string>
    <string name="label_phone_number">Phone Number: </string>
    <string name="label_slack">Slack Username: </string>
</resources>
